Fixed room moving bug